--- a/firmware/source/board_config.h.in
+++ b/firmware/source/board_config.h.in
@@ -14,6 +14,7 @@
 #define QTPY            4
 #define QT2040_TRINKEY  5
 #define FEATHER_EPD		6
+#define MICROMOD_RP2040 7
 
 #define BOARD ${BOARD}
 
@@ -191,6 +192,44 @@
   #define U2IF_UART1_RX 9
   // I2S
   #define I2S_ENABLED  I2S_ALLOW
+  #define U2IF_I2S_CLK 10
+  #define U2IF_I2S_WS  11
+  #define U2IF_I2S_SD  12
+  // HUB75
+  #define HUB75_ENABLED  HUB75_ALLOW
+
+//---------------------------------------------------------
+// MicroMod RP2040
+//---------------------------------------------------------
+#elif BOARD == MICROMOD_RP2040
+  // I2C0
+  #define I2C0_ENABLED 1
+  #define U2IF_I2C0_SDA 4
+  #define U2IF_I2C0_SCL 5
+  // I2C1
+  #define I2C1_ENABLED 0
+  #define U2IF_I2C1_SDA 14
+  #define U2IF_I2C1_SCL 15
+  // SPI0
+  #define SPI0_ENABLED 1
+  #define U2IF_SPI0_CK 22
+  #define U2IF_SPI0_MOSI 23
+  #define U2IF_SPI0_MISO 20
+  // SPI1
+  #define SPI1_ENABLED 1
+  #define U2IF_SPI1_CK 14
+  #define U2IF_SPI1_MOSI 15
+  #define U2IF_SPI1_MISO 14
+  // UART0
+  #define UART0_ENABLED 1
+  #define U2IF_UART0_TX 0
+  #define U2IF_UART0_RX 1
+  // UART1
+  #define UART1_ENABLED 1
+  #define U2IF_UART1_TX 8
+  #define U2IF_UART1_RX 9
+  // I2S
+  #define I2S_ENABLED  0
   #define U2IF_I2S_CLK 10
   #define U2IF_I2S_WS  11
   #define U2IF_I2S_SD  12
